[project]
name = "pydeps2env"
description = "A python helper to generate conda environment files from project dependencies."
readme = {file = "README.md", content-type="text/markdown"}
keywords = [
  "conda",
  "pyproject",
]
license = {file = "LICENSE", name="BSD License"}
authors = [
    {name="Çağtay Fabry", email="cagtay.fabry@bam.de"},
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  # see: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
  "version", # version gets derived from git by setuptools_scm.
]
dependencies = [
  "packaging",
  "pyyaml",
  'tomli; python_version < "3.11"',
]
[project.optional-dependencies]
test = [
  # needed to run the test suite
  "pytest",
  "pytest-cov",
]
[project.urls]
bug_tracker = "https://github.com/CagtayFabry/pydeps2env/-/issues"
repository = "https://github.com/CagtayFabry/pydeps2env"
[project.scripts]
pydeps2env = "pydeps2env.generate_environment:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools_scm[toml]>=6.2",
]

[tool.setuptools.packages]
find = {exclude = ["test", "resources"]}

[tool.setuptools_scm]
write_to = "pydeps2env/_version.py"
