[project]
name = "test"
requires-python = ">=3.8,<3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "boltons",
  "IPython",
  "numpy>=1.20",
  "pandas>=1",
  "pydeps2env@ git+https://github.com/CagtayFabry/pydeps2env.git",
]
[project.optional-dependencies]
doc = [
  "sphinx",
]
pip_only = [
  "bidict",
]
test = [
  "pytest",
]
[project.urls]
author = "Cagtay Fabry <cagtay.fabry@bam.de>"
author_email = "cagtay.fabry@bam.de"
home_page = "https://github.com/CagtayFabry/pydeps2env"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=40.9",
  "setuptools_scm",
  "wheel",
]
