[metadata]
name = weldx
author = "Cagtay Fabry <cagtay.fabry@bam.de>"
author_email = "cagtay.fabry@bam.de"
home_page = "https://github.com/CagtayFabry/pydeps2env"

[options]
python_requires = >=3.8,<3.10
setup_requires =
    setuptools >=38.3.0
    setuptools_scm
install_requires =
    numpy >=1.20
    pandas >=1.0

[options.extras_require]
test =
    pytest
pip_only =
    datatable
